--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: var(--deep-green);
+    background: var(--black);
     height: 80px;
     display: flex;
     font-size: 1.2rem;
@@ -69,7 +69,7 @@
     }
 
     .navbar-menu.active {
-        background: var(--deep-green);
+        background: var(--black);
         left: 0;
         opacity: 1;
         transition: all 0.5s ease;
