--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -20,11 +20,11 @@
 }
 
 .btn--outline {
-    background-color: transparent;
+    background: rgba(0, 0, 0, 0.5);
     color: var(--white);
     padding: 8px 20px;
     border-radius: 4px;
-    border: 1px solid var(--white);
+    border: 2px solid var(--white);
     transition: all 0.2s ease-out;
 }
 
