--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@
     --red-wine: #9E2A2B;
     --dark-red-wine: #540B0E;
     --white: #FFF;
-    --black: #01040e;
+    --black: #000;
     --dark-grey: #22262a;
     --deep-green: #081C15;
 }
