fix: add wine updates

--- a/client/src/components/WineForm/AddWine.css
+++ b/client/src/components/WineForm/AddWine.css
@@ -1,5 +1,5 @@
 .background-bottles {
-    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url(../images/biljana-martinic-IGJ_21drT3g-unsplash.jpg) no-repeat center center;
+    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url(./biljana-martinic-IGJ_21drT3g-unsplash.jpg) no-repeat center center;
     background-size: cover;
     width: 100%;
     height: 100%;
