--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,11 +1,15 @@
 .navbar {
-    background: var(--black);
+    background-color: var(--black);
     height: 80px;
     display: flex;
     font-size: 1.2rem;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
+
+/*.navbar.active {*/
+
+/*}*/
 
 .flex {
     display: flex;
@@ -23,10 +27,8 @@
 
 .navbar-menu {
     display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-gap: 10px;
+    grid-template-columns: repeat(5, auto);
     list-style: none;
-    width: 70vw;
     justify-content: end;
     margin-right: 2rem;
     text-align: center;
@@ -56,7 +58,8 @@
     display: none;
 }
 
-@media screen and (max-width: 500px) {
+
+@media screen and (max-width: 600px) {
     .navbar {
         position: relative;
     }
