fix: smaller videos, title now reads better, navbar is now evenly spaced

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -7,12 +7,11 @@
     align-items: center;
 }
 
-/*.navbar.active {*/
-
-/*}*/
-
-.flex {
+.navbar-container {
     display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .navbar-logo {
@@ -32,6 +31,7 @@
     justify-content: end;
     margin-right: 2rem;
     text-align: center;
+    grid-gap: 10px;
 }
 
 .navbar-links {
@@ -49,6 +49,7 @@
 .navbar-links-mobile {
     display: none;
 }
+
 
 .fa-bars {
     color: var(--white);
@@ -88,6 +89,9 @@
         padding: 2rem;
         width: 100%;
         display: table;
+    }
+    .navbar-item {
+        height: 80px;
     }
 
     .navbar-links:hover {
