--- a/client/src/components/HeroSection/HeroSection.css
+++ b/client/src/components/HeroSection/HeroSection.css
@@ -15,15 +15,18 @@ video {
 .hero-container h1 {
     padding-top: 40px;
     font-size: 80px;
+    text-shadow: 0px 1px 30px #252424, -1px -1px 30px #000;
 }
 
 .hero-container p {
     font-size: 30px;
+    text-shadow: 10px 4px 10px #000000, 3px -3px 8px #000;
 }
+
 
 .hero-btns {
     display: grid;
-    width: 80%;
+    width: 60%;
     margin: auto;
 }
 
