--- a/client/src/pages/assets/css/FormSignup.css
+++ b/client/src/pages/assets/css/FormSignup.css
@@ -11,6 +11,7 @@
     display: flex;
     text-align: center;
     color: white;
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.4);
 }
 
 .controller- {
@@ -28,6 +29,10 @@
 
 .card-h {
     margin-bottom: 50px;
+}
+
+.error-message {
+    color: var(--red-wine);
 }
 
 @media screen and (min-width: 500px) {
