--- a/client/src/pages/assets/css/FormSignup.css
+++ b/client/src/pages/assets/css/FormSignup.css
@@ -45,7 +45,7 @@
     }
 
     .controller-container {
-        width: 60%;
+        width: 500px;
     }
 
     .controller- {
@@ -56,7 +56,7 @@
     }
 
     .card-h {
-        width: 60%;
+        width: 500px;
         background-color: black;
     }
 
