--- a/client/src/components/assets/css/Login.css
+++ b/client/src/components/assets/css/Login.css
@@ -12,6 +12,11 @@
     border: 4px solid white;
 }
 
+.error-login-message {
+    color: var(--white);
+    font-size: 18px;
+}
+
 .login-btn {
     font-size: 18px;
     padding: 6px;
@@ -22,6 +27,10 @@
     background: none;
     border: 4px solid white;
     box-shadow: inset 10px 10px 10px rgba(0, 0, 0, 0.5);
+}
+
+.login Button {
+    margin: 10px;
 }
 
 @media screen and (min-width: 500px) {
