--- a/client/src/components/assets/css/Signup.css
+++ b/client/src/components/assets/css/Signup.css
@@ -26,6 +26,10 @@
     box-shadow: inset 10px 10px 10px rgba(0, 0, 0, 0.5);
 }
 
+.signup {
+    width: 100%;
+}
+
 .logo {
     width: 80px;
     height: auto;
@@ -35,6 +39,15 @@
 
 .t-a-center {
     text-align: center;
+}
+
+.error-signup-message {
+    color: var(--white);
+    font-size: 18px;
+}
+
+.signup Button {
+    margin: 10px;
 }
 
 @media screen and (min-width: 500px) {
