--- a/client/src/components/HeroSection/HeroSection.css
+++ b/client/src/components/HeroSection/HeroSection.css
@@ -1,37 +1,35 @@
-video {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: -1;
-    top: -50px;
-}
-
 .hero-container {
-    text-align-last: center;
-    color: white;
+    color: var(--dark-grey);
+    background-image: url("./placeholderwinery.jpg");
+    background-size: cover;
+    height: 400px;
+    width: 100%;
+
 }
 
-.hero-container h1 {
-    padding-top: 40px;
-    font-size: 80px;
-    text-shadow: 0px 1px 30px #252424, -1px -1px 30px #000;
+.header-container {
+    width: 80%;
 }
 
-.hero-container p {
-    font-size: 30px;
-    text-shadow: 10px 4px 10px #000000, 3px -3px 8px #000;
+.header-container h2 {
+    font-family: var(--STIX-Two-Tex);
+    padding: 20px 0 0 20px;
+    font-size: 36px;
 }
 
-
-.hero-btns {
-    display: grid;
-    width: 60%;
-    margin: auto;
+.header-container p {
+    padding-left: 20px;
+    font-size: 18px;
+    font-family: var(--Poppins);
+    text-shadow: 5px 0px 5px #fff, 5px 0px 5px #fff;
 }
 
-.hero-btns .btn {
-    margin: 10px;
+.header-container div {
+
+    margin: 40px 0 0 20px;
+}
+.header-container a {
+    border-radius: 50px;
 }
 
 @media screen and (min-width: 600px) {
