fix: adjust styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,7 @@
 
 :root {
     --white-wine: #f4efe7;
-    --dark-white-wine: #c49254;
+    --dark-white-wine: #f2d184;
     --red-wine: #d53132;
     --dark-red-wine: #540B0E;
     --white: #FFF;
