--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,10 +1,12 @@
 .navbar {
-    background-color: var(--black);
+    background-color: transparent;
     height: 80px;
     display: flex;
     font-size: 1.2rem;
     justify-content: space-between;
     align-items: center;
+    position: absolute;
+    width: -webkit-fill-available;
 }
 
 .navbar-container {
@@ -16,12 +18,14 @@
 
 .navbar-container a {
     border-radius: 50px;
+    text-decoration: none;
 }
 
 .logo-title {
     font-family: var(--Spectral-SC);
-    color: var(--white);
-    padding-left: 10px;
+    color: var(--dark-grey);
+    padding-left: 20px;
+    font-size: 40px;
 }
 
 .navbar-logo {
@@ -45,7 +49,7 @@
 }
 
 .navbar-links {
-    color: var(--white);
+    color: var(--light-grey-green);
     text-decoration: none;
     padding: 0.5rem 1rem;
 }
@@ -62,7 +66,7 @@
 
 
 .fa-bars {
-    color: var(--white);
+    color: var(--dark-grey);
 }
 
 .menu-icon {
@@ -73,12 +77,7 @@
     margin: 10px;
 }
 
-
-@media screen and (max-width: 600px) {
-    .navbar {
-        position: relative;
-    }
-
+@media screen and (max-width: 768px) {
     .navbar-menu {
         display: flex;
         flex-direction: column;
@@ -106,6 +105,10 @@
     }
     .navbar-item {
         height: 80px;
+    }
+
+    .logo-title {
+        font-size: 32px;
     }
 
     .navbar-logo {
@@ -157,4 +160,18 @@
         color: var(--black);
         transition: 250ms;
     }
+}
+
+@media screen and (min-width: 1440px) {
+    .logo-title {
+        font-size: 50px;
+    }
+
+}
+
+@media screen and (min-width: 2560px) {
+    .logo-title {
+        padding-left: 60px;
+    }
+
 }
