fix: signup page style

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,7 @@
     --dark-red-wine: #540B0E;
     --white: #FFF;
     --black: #000;
+    --pink: #e38389;
     --dark-grey: #404040;
     --light-grey-green: #4c6156;
     --deep-green: #081C15;
