--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -27,8 +27,8 @@
 }
 
 .btn--outline {
-    background: rgba(0, 0, 0, 0.5);
-    color: var(--white);
+    background: var(--white);
+    color: var(--black);
     padding: 8px 20px;
     border-radius: 4px;
     border: 1px solid var(--white);
