--- a/client/src/components/assets/css/Login.css
+++ b/client/src/components/assets/css/Login.css
@@ -9,11 +9,10 @@
     padding: 6px;
     width: 95%;
     margin: 16px 0;
-    border: 4px solid white;
 }
 
 .error-login-message {
-    color: var(--white);
+    color: var(--red-wine);
     font-size: 18px;
 }
 
@@ -23,17 +22,19 @@
     width: 100%;
     margin: 16px 0;
     cursor: pointer;
-    color: white;
+    color: var(--black);
     background: none;
     border: 4px solid white;
-    box-shadow: inset 10px 10px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
 }
 
-.login Button {
+
+
+.login-form Button {
     margin: 10px;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 768px) {
 
 
 }
