--- a/client/src/components/assets/css/Signup.css
+++ b/client/src/components/assets/css/Signup.css
@@ -1,7 +1,3 @@
-.card-h{
-    height: 540px;
-}
-
 .input-group {
     padding: 40px;
     display: flex;
@@ -20,7 +16,7 @@
     width: 100%;
     margin: 16px 0;
     cursor: pointer;
-    color: white;
+    color: var(--black);
     background: none;
     border: 4px solid white;
     box-shadow: inset 10px 10px 10px rgba(0, 0, 0, 0.5);
@@ -42,7 +38,7 @@
 }
 
 .error-signup-message {
-    color: var(--white);
+    color: var(--red-wine);
     font-size: 18px;
 }
 
@@ -50,9 +46,6 @@
     margin: 10px;
 }
 
-@media screen and (min-width: 500px) {
-    .card-h{
-        height: 640px;
-    }
+@media screen and (min-width: 768px) {
 
 }
