--- a/client/src/pages/assets/css/FormSignup.css
+++ b/client/src/pages/assets/css/FormSignup.css
@@ -1,64 +1,139 @@
-.background-cellar {
+.background-colour {
     text-align: -webkit-center;
-    background: url(../images/marvin-l-61sZcZl3Mlk-unsplash.jpg) no-repeat center center;
-    background-size: cover;
-
     width: 100%;
     height: 100%;
+    place-content: center;
+    padding-bottom: 80px;
+    background: linear-gradient(8deg, #ee7483, #f3d6b5);
+    background-size: 400% 400%;
+
+    -webkit-animation: AnimationName 40s ease infinite;
+    -moz-animation: AnimationName 40s ease infinite;
+    animation: AnimationName 40s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:50% 0%}
+    50%{background-position:51% 100%}
+    100%{background-position:50% 0%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:50% 0%}
+    50%{background-position:51% 100%}
+    100%{background-position:50% 0%}
+}
+@keyframes AnimationName {
+    0%{background-position:50% 0%}
+    50%{background-position:51% 100%}
+    100%{background-position:50% 0%}
+}
+
+
+.block {
+    height: 80px;
+    background-color: var(--white);
+
+}
+
+.betty {
+    display: none;
 }
 
 .controller-container {
     display: flex;
     text-align: center;
-    color: white;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.4);
+    color: var(--black);
+
 }
 
 .controller- {
     width: 50%;
     font-size: 24px;
     padding: 10px;
-    background-color: black;
+    color: var(--black);
+    background-color: var(--white);
+
 }
 
 .controller-selected-controller {
     width: 50%;
     font-size: 24px;
     padding: 10px;
+
+
 }
 
-.card-h {
-    margin-bottom: 50px;
+.card-h h1 {
+    padding-top: 40px;
 }
 
 .error-message {
-    color: var(--red-wine);
+    color: var(--dark-grey);
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 768px) {
 
-    #background-cellar {
-        text-align: -webkit-center;
+    .background-colour {
+        padding-top: 80px;
+        display: flex;
     }
+
+    .box-shadow {
+        display: flex;
+        -webkit-box-shadow: 0px 22px 30px -5px rgba(0,0,0,0.4);
+        box-shadow: 0px 22px 30px -5px rgba(0,0,0,0.4);
+    }
+
     .block {
-        height: 50px;
+        display: none;
+    }
+
+    .betty {
+        display: flex;
+        height: 552px;
+        width: 350px;
+        background-color: white;
     }
 
     .controller-container {
-        width: 500px;
+        width: 350px;
     }
 
     .controller- {
         background: none;
     }
     .controller-selected-controller {
-        background-color: black;
+        background-color: var(--white);
     }
 
     .card-h {
-        width: 500px;
-        background-color: black;
+        width: 350px;
+        height: 500px;
+        background-color: var(--white);
     }
-
-
 }
+
+@media screen and (min-width: 1024px) {
+    .betty,
+    .controller-container,
+    .card-h {
+        width: 400px;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .betty,
+    .controller-container,
+    .card-h {
+        width: 500px;
+    }
+}
+
+@media screen and (min-width: 2560px) {
+.betty,
+.controller-container,
+.card-h {
+    width: 600px;
+}
+}
+
