--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -1,5 +1,5 @@
 .btn {
-    padding: 8px 20px;
+
     border-radius: 4px;
     outline: none;
     border: none;
@@ -17,13 +17,18 @@
 .btn--white {
     background-color: var(--white);
     color: var(--deep-green);
-    border: 1px solid var(--white);
+    border: 2px solid var(--white);
 }
 
 .btn--dark-red-wine {
     background-color: var(--dark-red-wine);
     color: var(--white);
-    border: 1px solid var(--dark-red-wine);
+    border: 2px solid var(--dark-red-wine);
+}
+.btn--green {
+    background-color: var(--green);
+    color: var(--white);
+    border: 2px solid var(--white);
 }
 
 .btn--outline {
@@ -31,7 +36,7 @@
     color: var(--black);
     padding: 8px 20px;
     border-radius: 4px;
-    border: 1px solid var(--white);
+    border: 2px solid var(--white);
     transition: all 0.2s ease-out;
 }
 
@@ -48,10 +53,19 @@
     font-size: 20px;
 }
 
-.btn--medium:hover,
-.btn--large:hover {
+.btn--medium:hover {
     background-color: var(--white);
     color: var(--black);
     transition: all 0.2s ease-out;
+    border: 2px solid var(--black);
+}
+
+
+.btn--large:hover {
+    padding: 12px 26px;
+    background-color: var(--white);
+    color: var(--black);
+    transition: all 0.2s ease-out;
+    border: 2px solid var(--black);
 }
 
