--- a/client/src/components/assets/css/Login.css
+++ b/client/src/components/assets/css/Login.css
@@ -9,6 +9,7 @@
     padding: 6px;
     width: 95%;
     margin: 16px 0;
+    border-radius: 4px;
 }
 
 .error-login-message {
@@ -32,6 +33,9 @@
 
 .login-form Button {
     margin: 10px;
+    background-color: #61bd2f;
+    border-radius: 10px;
+    color: white;
 }
 
 @media screen and (min-width: 768px) {
