--- a/client/src/components/WineCard/WineCard.css
+++ b/client/src/components/WineCard/WineCard.css
@@ -3,7 +3,6 @@
     width: 200px;
     height: 280px;
     background-color: var(--dark-red-wine);
-    padding: 40px;
     text-decoration: none;
     color: var(--white);
     -webkit-box-shadow: 0px 22px 30px -5px rgba(0,0,0,0.4);
@@ -20,4 +19,13 @@
 
 .wine-card-container {
     display: inline-flex;
+}
+
+.placeholder-image-wine {
+    background-image: url("../../assets/images/placeholder-image-kate.png");
+    width: 100%;
+    height: 80%;
+    background-size: cover;
+    background-color: var(--white);
+    border-radius: 10px;
 }
