fix: button and font size

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,7 @@
     --pink: #e38389;
     --dark-grey: #404040;
     --light-grey-green: #4c6156;
+    --green:#61bd2f;
     --deep-green: #081C15;
     --Alegreya-SC: 'Alegreya SC', serif;
     --Charmonman: 'Charmonman', cursive;
