--- a/client/src/components/WineCard/WineCard.css
+++ b/client/src/components/WineCard/WineCard.css
@@ -8,6 +8,7 @@
     -webkit-box-shadow: 0px 22px 30px -5px rgba(0,0,0,0.4);
     box-shadow: 0px 22px 30px -5px rgba(0,0,0,0.4);
     border-radius: 10px;
+
 }
 
 .cardItem a {
@@ -23,9 +24,10 @@
 
 .placeholder-image-wine {
     background-image: url("../../assets/images/placeholder-image-kate.png");
-    width: 100%;
-    height: 80%;
+    width: 90%;
+    height: 70%;
     background-size: cover;
     background-color: var(--white);
     border-radius: 10px;
+    margin: 4px auto;
 }
