--- a/client/src/components/WineCard/WineCard.css
+++ b/client/src/components/WineCard/WineCard.css
@@ -1,7 +1,7 @@
 .cardItem {
     margin: 40px;
-    width: 200px;
-    height: 280px;
+    width: 250px;
+    height: 300px;
     background-color: var(--dark-red-wine);
     text-decoration: none;
     color: var(--white);
@@ -25,9 +25,12 @@
 .placeholder-image-wine {
     background-image: url("../../assets/images/placeholder-image-kate.png");
     width: 90%;
-    height: 70%;
+    height: 60%;
     background-size: cover;
     background-color: var(--white);
     border-radius: 10px;
     margin: 4px auto;
+}
+.wine-card-name {
+    overflow-wrap: break-word;
 }
