--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center;
     position: absolute;
-    width: -webkit-fill-available;
+    width: 100%;
     background: rgba( 255, 255, 255, 0.10 );
     backdrop-filter: blur( 2px );
     -webkit-backdrop-filter: blur( 2px );
