--- a/client/src/pages/assets/css/Collection.css
+++ b/client/src/pages/assets/css/Collection.css
@@ -17,7 +17,7 @@
     width: fit-content;
     padding: 4px 24px;
     margin: auto;
-    background: rgba( 255, 255, 255, 0.30 );
+    background: rgb(88, 12, 12, 0.4);
     box-shadow: 0 8px 32px 0 rgba(6, 6, 24, 0.37);
     backdrop-filter: blur( 10px );
     -webkit-backdrop-filter: blur( 10px );
