--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -1,6 +1,5 @@
 .btn {
-
-    border-radius: 4px;
+    border-radius: 50px;
     outline: none;
     border: none;
     cursor: pointer;
@@ -35,22 +34,35 @@
     background: var(--white);
     color: var(--black);
     padding: 8px 20px;
-    border-radius: 4px;
+    border-radius: 50px;
     border: 2px solid var(--white);
     transition: all 0.2s ease-out;
 }
 
+.btn--icon-red {
+    color: var(--black);
+    background-color: var(--white);
+    padding: 8px 20px;
+    transition: all 0.2s ease-out;
+    font-size: 28px;
+}
+
 .btn--medium {
     padding: 8px 20px;
-    border-radius: 4px;
+    border-radius: 50px;
     font-size: 18px;
 }
 
 
 .btn--large {
     padding: 12px 26px;
-    border-radius: 4px;
+    border-radius: 50px;
     font-size: 20px;
+}
+
+.btn--small {
+    font-size: 18px;
+    padding: 8px 20px;
 }
 
 .btn--medium:hover {
@@ -68,4 +80,12 @@
     transition: all 0.2s ease-out;
     border: 2px solid var(--black);
 }
+
+.btn--small:hover {
+    font-size: 28px;
+    padding: 8px 20px;
+    transition: all 0.2s ease-out;
+    color: var(--red-wine);
+}
+
 
