--- a/client/src/components/WineForm/AddWine.css
+++ b/client/src/components/WineForm/AddWine.css
@@ -154,7 +154,7 @@
         margin: 20px auto;
     }
 
-    .text-align-center button {
+    .add-wine-button {
         font-size: 36px;
         border-radius: 10px;
     }
