--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -11,6 +11,7 @@
     backdrop-filter: blur( 3px );
     -webkit-backdrop-filter: blur( 3px );
     border: 1px solid rgba( 255, 255, 255, 0.18 );
+    z-index: 1;
 
 }
 
@@ -114,7 +115,7 @@
 
     }
     .navbar-item {
-        height: 80px;
+        height: 90px;
         padding: 24px;
         font-size: 22px;
     }
