--- a/client/src/components/WineList/WineList.css
+++ b/client/src/components/WineList/WineList.css
@@ -2,10 +2,16 @@
     text-align: center;
 }
 .filter-container {
-    margin: 20px;
+    padding: 36px;
     flex-flow: wrap;
     display: inline-flex;
     place-content: center;
     width: 80%;
     justify-content: space-evenly;
+}
+
+@media screen and (min-width: 768px) {
+    .filter-container {
+        width: 100%;
+    }
 }
